--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -22,13 +22,13 @@
         android:elevation="10dp"
         android:orientation="horizontal">
 
-<ImageView
-    android:visibility="gone"
-    android:layout_width="2dp"
-    android:layout_height="60dp"
-    android:background="@color/gray"
-    android:layout_marginRight="15dp"
-    android:padding="2dp"/>
+        <ImageView
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="15dp"
+            android:background="@color/gray"
+            android:padding="2dp"
+            android:visibility="gone" />
         <ImageView
 
             android:id="@+id/refresh_logo1"
