--- a/app/src/main/res/layout/activity_field_caluculator.xml
+++ b/app/src/main/res/layout/activity_field_caluculator.xml
@@ -80,7 +80,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <Button
                 android:id="@+id/recordBtn"
@@ -91,26 +92,53 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/Record"
+                android:layout_weight="0.4"
+                android:textSize="20dp" />
+
+            <Button
+                android:visibility="invisible"
+                android:id="@+id/recordBtn1"
+                style="@style/basicBtnStyle"
+                android:layout_width="120dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/Record"
+                android:layout_weight="0.4"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/count"
+                style="@style/header_h1_text_title"
+                android:layout_width="120dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.2"
                 android:textSize="20dp" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/latitude"
-                    style="@style/textbasic_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="20dp"
-                    android:gravity="center_vertical"
-                    android:text="" />
 
 
-            </LinearLayout>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/latitude"-->
+<!--                    style="@style/textbasic_title"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginLeft="25dp"-->
+<!--                    android:layout_marginTop="20dp"-->
+<!--                    android:gravity="center_vertical"-->
+<!--                    android:text="" />-->
+
+
+<!--            </LinearLayout>-->
 
 
         </LinearLayout>
@@ -130,7 +158,7 @@
                 style="@style/header_h1_text_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:text="@string/GPS_Points" />
 
 
@@ -140,7 +168,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/tvplotlandmark"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:text="@string/Distance" />
 
         </LinearLayout>
