--- a/app/src/main/res/layout/nutrient_details_layout.xml
+++ b/app/src/main/res/layout/nutrient_details_layout.xml
@@ -122,7 +122,7 @@
                 <TextView
                     style="@style/header_h1_text_title"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="Percentage of trees*" />
 
