--- a/app/src/main/res/layout/records_list_item.xml
+++ b/app/src/main/res/layout/records_list_item.xml
@@ -15,8 +15,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_weight="1.5"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/latitude"
@@ -24,6 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:maxLength="10"
                 android:text="lat" />
 
             <TextView
@@ -31,8 +32,8 @@
                 style="@style/textbasic_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_weight="1"
+                android:maxLength="10"
                 android:text="long" />
 
 
@@ -43,8 +44,8 @@
             style="@style/textbasic_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
             android:text="long" />
     </LinearLayout>
 
